# punk_dsp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  punk_dsp.cpp  punk_dsp.h
PunkDspModule/: punk_dsp.h
PunkDspModule/source/utils/: README.md
Workbench/: CMakeLists.txt
Workbench/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
dsp/Distortion/: ParametricWaveshaper.cpp  ParametricWaveshaper.h  README.md  TubeModel.cpp  TubeModel.h  Wavefolder.cpp  Wavefolder.h  Waveshaper.cpp  Waveshaper.h
dsp/Dynamics/: Compressor.cpp  Compressor.h  Gate.cpp  Gate.h  Lifter.cpp  Lifter.h  README.md
dsp/Followers/: EnvelopeFollower.cpp
dsp/Pitch/: PitchShifter.cpp  PitchShifter.h
dsp/followers/: EnvelopeFollower.h  PitchFollower.h
examples/Compressor/source/: PluginEditor.h  PluginProcessor.h
examples/Gate/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
examples/Lifter/source/: PluginProcessor.cpp
examples/Waveshaper/source/: PluginEditor.cpp
gui/: ExamplesLnF.cpp  ExamplesLnF.h  LevelMeter.h
modules/punk_dsp/: punk_dsp.h
modules/punk_dsp/dsp/: IDSPAlgorithm.h
modules/punk_dsp/dsp/Distortion/: Waveshaper.cpp  Waveshaper.h
modules/punk_dsp/dsp/Dynamics/: Compressor.cpp  Compressor.h  Gate.h  Lifter.h
modules/punk_dsp/utils/: PresetManager.cpp
punk_dsp/dsp/Distortion/: TubeModel.cpp
punk_dsp/dsp/Dynamics/: Compressor.cpp  Compressor.h  Gate.cpp  Gate.h  Lifter.cpp
source/dsp/Distortion/: Waveshaper.cpp  Waveshaper.h
source/dsp/Dynamics/: Compressor.cpp  Compressor.h
utils/: PresetManager.cpp  PresetManager.h
